plugins {
    id "java"
    id "io.freefair.lombok" version "6.5.1"
    id "org.sonarqube" version "3.5.0.2730"
}

group 'nu.hagelin.adventofcode'
version '1.0-SNAPSHOT'

java {
    sourceCompatibility = 17
    targetCompatibility = 17
}

repositories {
    mavenCentral()
}

test {
    useJUnitPlatform()
}

dependencies {
    implementation 'org.slf4j:slf4j-api:2.0.3'
    implementation 'org.slf4j:slf4j-simple:2.0.3'
    implementation 'org.apache.commons:commons-lang3:3.12.0'
    implementation 'org.apache.commons:commons-math3:3.6.1'
    implementation 'org.jgrapht:jgrapht-core:1.5.1'
    implementation 'com.google.guava:guava:31.1-jre'
    implementation 'org.jetbrains:annotations:23.0.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.9.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
    testImplementation 'org.assertj:assertj-core:3.23.1'
}

sonarqube {
    properties {
        property "sonar.projectKey", "martin67_adventofcode"
        property "sonar.organization", "martin-hagelin"
        property "sonar.host.url", "https://sonarcloud.io"
    }
}
